--- a/djangauvergne/static/stylesheets/main.css
+++ b/djangauvergne/static/stylesheets/main.css
@@ -6308,17 +6308,13 @@ blockquote p {
   border-radius: 5px;
 }
 
-/* line 53, ../sass/_page.scss */
-header {
-  height: 420px;
-}
-/* line 56, ../sass/_page.scss */
+/* line 54, ../sass/_page.scss */
 header ul.nav {
   list-style-type: none;
   height: 40px;
   padding-top: 20px;
 }
-/* line 61, ../sass/_page.scss */
+/* line 59, ../sass/_page.scss */
 header ul.nav li {
   display: block;
   float: left;
@@ -6326,42 +6322,46 @@ header ul.nav li {
   text-transform: uppercase;
   font-weight: bold;
 }
-/* line 67, ../sass/_page.scss */
+/* line 65, ../sass/_page.scss */
 header ul.nav li:before {
   content: "< ";
 }
-/* line 70, ../sass/_page.scss */
+/* line 68, ../sass/_page.scss */
 header ul.nav li:after {
   content: " />";
 }
-/* line 73, ../sass/_page.scss */
+/* line 71, ../sass/_page.scss */
 header ul.nav li a {
   position: relative;
   z-index: 20;
   color: #513165;
 }
-/* line 77, ../sass/_page.scss */
+/* line 75, ../sass/_page.scss */
 header ul.nav li a:hover {
   color: #f27e8c;
 }
-/* line 83, ../sass/_page.scss */
+/* line 81, ../sass/_page.scss */
 header #brand > div {
   position: absolute;
   top: 10px;
 }
-/* line 87, ../sass/_page.scss */
+/* line 85, ../sass/_page.scss */
 header #brand #brand_bg {
   z-index: 10;
 }
-/* line 88, ../sass/_page.scss */
+/* line 86, ../sass/_page.scss */
 header #brand #brand_title {
   z-index: 11;
 }
-/* line 89, ../sass/_page.scss */
+/* line 87, ../sass/_page.scss */
 header #brand #brand_poney {
   z-index: 12;
 }
 
+/* line 91, ../sass/_page.scss */
+#content-wrapper {
+  margin-top: 370px;
+}
 /* line 94, ../sass/_page.scss */
 #content-wrapper div[role="content"] {
   background: rgba(255, 255, 255, 0.4);
@@ -6371,8 +6371,19 @@ header #brand #brand_poney {
   -o-border-radius: 15px;
   border-radius: 15px;
 }
+/* line 98, ../sass/_page.scss */
+#content-wrapper div[role="content"] .entry-title {
+  position: relative;
+  z-index: 20;
+  text-shadow: white 1px 1px 5px;
+}
+/* line 105, ../sass/_page.scss */
+#content-wrapper > aside {
+  position: relative;
+  z-index: 20;
+}
 
-/* line 100, ../sass/_page.scss */
+/* line 111, ../sass/_page.scss */
 #footer-wrapper {
   background: #513165;
   -webkit-box-shadow: #513165 -5px 0 10px;
@@ -6383,7 +6394,7 @@ header #brand #brand_poney {
   padding-top: 30px;
   min-height: 100px;
 }
-/* line 109, ../sass/_page.scss */
+/* line 120, ../sass/_page.scss */
 #footer-wrapper footer * {
   font-size: 14px;
 }
